@@ -13,19 +13,10 @@ import pipe.io.ReachabilityGraphFileHeader;
 import pipe.io.StateRecord;
 import pipe.io.TransitionRecord;
 import pipe.utilities.math.Matrix;
-import pipe.views.ArcView;
-import pipe.views.MarkingView;
-import pipe.views.PetriNetView;
-import pipe.views.PlaceView;
-import pipe.views.TransitionView;
+import pipe.views.*;
 
 import java.io.*;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Iterator;
-import java.util.LinkedList;
-import java.util.Stack;
-import java.util.Vector;
+import java.util.*;
 
 /**
  * @author Nadeem
@@ -53,27 +44,22 @@ import java.util.Vector;
 public class StateSpaceGenerator {
 
 	private static final boolean DEBUG = false;
-	private static final boolean RATE = false;
-	private static final boolean PROBABILITY = true;
 	private static final int NUMHASHROWS = 46567;
 
 	// Array storing the transitions fired
 	private static final Stack transitions = new Stack();
 	private static boolean[] enabledTransitions;
-	private static int[][] _incidenceMatrixBeforeFire;
 
 	public static void generate(PetriNetView pnmlData, File reachGraph)
-			throws OutOfMemoryError, ImmediateAbortException, IOException, MarkingNotIntegerException {
+            throws OutOfMemoryError, Exception {
 
-		// back up place markings
-		//pnmlData.backUpPlaceViewsMarking();
 		pnmlData.setFunctionalExpressionRelatedPlaces();
 		pnmlData.storeCurrentMarking();
 		
-		LinkedList<MarkingView>[] markings = pnmlData.getCurrentMarkingVector();
+		List<MarkingView>[] markings = pnmlData.getCurrentMarkingVector();
 		int[] marking = new int[markings.length];
 		for (int i = 0; i < markings.length; i++) {
-			marking[i] = markings[i].getFirst().getCurrentMarking();
+			marking[i] = markings[i].get(0).getCurrentMarking();
 		}
 		State currentMarking = new State(marking);
 		int statearraysize = currentMarking.getState().length;
@@ -219,7 +205,7 @@ public class StateSpaceGenerator {
 	 * uses a hashtable so that it can quickly check whether a state has already
 	 * been explored.
 	 * 
-	 * @param pnmlData
+	 * @param petriNetView
 	 * @param reachGraph
 	 * @param resultspane
 	 * @throws TimelessTrapException
@@ -229,19 +215,18 @@ public class StateSpaceGenerator {
 	 * @throws OutOfMemoryError
 	 * @throws MarkingNotIntegerException 
 	 */
-	public static void generate(PetriNetView pnmlData, File reachGraph,
-			ResultsHTMLPane resultspane) throws OutOfMemoryError,
-			TimelessTrapException, ImmediateAbortException, IOException, MarkingNotIntegerException {
+	public static void generate(PetriNetView petriNetView, File reachGraph,
+			ResultsHTMLPane resultspane) throws OutOfMemoryError, MarkingNotIntegerException, Exception {
 
-		pnmlData.backUpPlaceViewsMarking();
-		pnmlData.setFunctionalExpressionRelatedPlaces();
+		petriNetView.backUpPlaceViewsMarking();
+		petriNetView.setFunctionalExpressionRelatedPlaces();
 		// This is used to catch timeless traps. It's the maximum number
 		// of attempts to try and get successors to vanishing states.
 		final int MAX_TRIES = 100000;
-		LinkedList<MarkingView>[] markings = pnmlData.getCurrentMarkingVector();
+		List<MarkingView>[] markings = petriNetView.getCurrentMarkingVector();
 		int[] marking = new int[markings.length];
 		for (int i = 0; i < markings.length; i++) {
-			marking[i] = markings[i].getFirst().getCurrentMarking();
+			marking[i] = markings[i].get(0).getCurrentMarking();
 		}
 		State currentMarking = new State(marking);
 		int statearraysize = currentMarking.getState().length;
@@ -311,26 +296,26 @@ public class StateSpaceGenerator {
 			return;
 		}
 
-		pnmlData.createMatrixes();
+		petriNetView.createMatrixes();
 
 		/*
 		 * Phase I Initialise the tangibleStates stack with initial tangible
 		 * states.
 		 */
 		System.out.println("Beginning Phase I: "
-				+ "Determining initial tangible states...");
+                + "Determining initial tangible states...");
 
 		// Start state space exploration
-		if (isTangible(pnmlData, currentMarking)) {
+		if (isTangible(petriNetView, currentMarking)) {
 			tangible = new MarkingState(currentMarking, numtangiblestates);
-			tangible.setPlaceMarking(pnmlData.getCurrentMarkingVector());
+			tangible.setPlaceMarking(petriNetView.getCurrentMarkingVector());
 			tangibleStates.enqueue(tangible);
 			addExplored(tangible, exploredStates, esoFile, false);
 			numtangiblestates++;
 		} else {
 			int attempts = 0; // This is a counter used to detect timeless traps
 			VanishingState vs = new VanishingState(currentMarking, 1.0);
-			vs.setPlaceMarking(pnmlData.getCurrentMarkingVector());
+			vs.setPlaceMarking(petriNetView.getCurrentMarkingVector());
 			vanishingStates.push(vs);
 			while ((!vanishingStates.isEmpty()) && (attempts != MAX_TRIES)) {
 				attempts++;
@@ -338,7 +323,7 @@ public class StateSpaceGenerator {
 				/**
 				 * 
 				 */
-				pnmlData.setCurrentMarkingVector(v.getState());
+				petriNetView.setCurrentMarkingVector(v.getState());
 				p = v.getRate();
 				// System.out.println("p: " + p);//debug
 				// numtransitionsfired += fire(_pnmlData, v, vansuccessor);
@@ -346,15 +331,16 @@ public class StateSpaceGenerator {
 				LinkedList<MarkingView>[] state = new LinkedList[v.getState().length];
 				for (int i = 0; i < v.getState().length; i++) {
 					LinkedList<MarkingView> mlist = new LinkedList<MarkingView>();
-					MarkingView m = new MarkingView(pnmlData.getTokenViews()
+					MarkingView m = new MarkingView(petriNetView.getTokenViews()
 							.getFirst(), v.getState()[i]);
 					mlist.add(m);
 					state[i] = mlist;
 				}
-				boolean[] enabledTransitions = pnmlData
-						.areTransitionsEnabled(state);
+                enabledTransitions = new boolean[0];
+//				boolean[] enabledTransitions = petriNetView
+//						.areTransitionsEnabled(state);
 
-				int transition = fireFirstEnabledTransition(pnmlData,
+				int transition = fireFirstEnabledTransition(petriNetView,
 						enabledTransitions, v, vansuccessor);
 
 				while (transition != -1) {
@@ -364,8 +350,8 @@ public class StateSpaceGenerator {
 					/**
 					 * 
 					 */
-					pnmlData.setCurrentMarkingVector(vprime.getState());
-					if (isTangible(pnmlData, vprime)) {
+					petriNetView.setCurrentMarkingVector(vprime.getState());
+					if (isTangible(petriNetView, vprime)) {
 						if (!explored(vprime, exploredStates)) {
 							tangible = new MarkingState(vprime,
 									numtangiblestates);
@@ -376,7 +362,7 @@ public class StateSpaceGenerator {
 							numtangiblestates++;
 						}
 					} else {
-						pprime = p * prob(pnmlData, v, vprime, transition);
+						pprime = p * prob(petriNetView, v, vprime, transition);
 						if (pprime > epsilon) {
 							VanishingState vsp =new VanishingState(vprime,
 									pprime);
@@ -384,7 +370,7 @@ public class StateSpaceGenerator {
 							vanishingStates.push(vsp);
 						}
 					}
-					transition = fireFirstEnabledTransition(pnmlData,
+					transition = fireFirstEnabledTransition(petriNetView,
 							enabledTransitions, v, vansuccessor);
 				}
 			}
@@ -418,14 +404,14 @@ public class StateSpaceGenerator {
 		//	pnmlData.setCurrentMarkingVector(s.getPlaceMarking());
 			// System.out.println("numtransitionsfired abans de fire: " +
 			// numtransitionsfired);//debug
-			pnmlData.createMatrixes();
-			numtransitionsfired += fire(pnmlData, s, tansuccessor);
+			petriNetView.createMatrixes();
+			numtransitionsfired += fire(petriNetView, s, tansuccessor);
 			//updatePlaceMarkings();
 			// System.out.println("numtransitionsfired despres de fire: " +
 			// numtransitionsfired);//debug
 			while (!tansuccessor.isEmpty()) {
 				sprime = (State) tansuccessor.pop();
-				if (isTangible(pnmlData, sprime)) {
+				if (isTangible(petriNetView, sprime)) {
 					if (!explored(sprime, exploredStates)) {
 						tangible = new MarkingState(sprime, numtangiblestates);
 						
@@ -447,11 +433,11 @@ public class StateSpaceGenerator {
 					
 					//here we calculate the rate, so we need place markings to be updated before this
 					numtransitions += transition(tangible,
-							rate(pnmlData, s, sprime), localarcs);
+							rate(petriNetView, s, sprime), localarcs);
 				} else {
 					int attempts = 0;
 					VanishingState vs = new VanishingState(sprime, rate(
-							pnmlData, s, sprime));
+							petriNetView, s, sprime));
 					vs.setPlaceMarking(sprime.getPlaceMarking());
 					vanishingStates.push(vs);
 					while ((!vanishingStates.isEmpty())
@@ -464,22 +450,22 @@ public class StateSpaceGenerator {
 								.getState().length];
 						for (int i = 0; i < v.getState().length; i++) {
 							LinkedList<MarkingView> mlist = new LinkedList<MarkingView>();
-							MarkingView m = new MarkingView(pnmlData
+							MarkingView m = new MarkingView(petriNetView
 									.getTokenViews().getFirst(),
 									v.getState()[i]);
 							mlist.add(m);
 							state[i] = mlist;
 						}
-						boolean[] enabledTransitions = pnmlData
+						boolean[] enabledTransitions = petriNetView
 								.areTransitionsEnabled(state);
 
-						int transition = fireFirstEnabledTransition(pnmlData,
+						int transition = fireFirstEnabledTransition(petriNetView,
 								enabledTransitions, v, vansuccessor);
 						//updatePlaceMarkings();
 						while (transition != -1) {
 							vprime = (State) vansuccessor.pop();
-							pprime = p * prob(pnmlData, v, vprime, transition);
-							if (isTangible(pnmlData, vprime)) {
+							pprime = p * prob(petriNetView, v, vprime, transition);
+							if (isTangible(petriNetView, vprime)) {
 								if (!explored(vprime, exploredStates)) {
 									tangible = new MarkingState(vprime,
 											numtangiblestates);
@@ -509,7 +495,7 @@ public class StateSpaceGenerator {
 								}
 							}
 
-							transition = fireFirstEnabledTransition(pnmlData,
+							transition = fireFirstEnabledTransition(petriNetView,
 									enabledTransitions, v, vansuccessor);
 						//	updatePlaceMarkings();
 						}
@@ -564,7 +550,7 @@ public class StateSpaceGenerator {
 				System.err.println("\nCould not delete intermediate file.");
 			}
 		}
-		pnmlData.restorePlaceViewsMarking();
+		petriNetView.restorePlaceViewsMarking();
 	}
 	
 	/**
@@ -632,7 +618,7 @@ public class StateSpaceGenerator {
 	 * @return
 	 * @throws MarkingNotIntegerException 
 	 */
-	private static int fire(PetriNetView pnmlData, State vs, Stack succ) throws MarkingNotIntegerException {
+	private static int fire(PetriNetView pnmlData, State vs, Stack succ) throws Exception {
 		int transCount = pnmlData.numberOfTransitions();
 
 		int transitionsfired = 0;
@@ -749,15 +735,13 @@ public class StateSpaceGenerator {
 		int[][] CMinus = pnmlData
 				.getTokenViews()
 				.getFirst()
-				.getBackwardsIncidenceMatrix(pnmlData.getArcsArrayList(),
-						pnmlData.getTransitionsArrayList(),
-						pnmlData.getPlacesArrayList());
+				.getBackwardsIncidenceMatrix(pnmlData.getModel().getArcs(),
+                        pnmlData.getModel().getTransitions(), pnmlData.getModel().getPlaces());
 		int[][] CPlus = pnmlData
 				.getTokenViews()
 				.getFirst()
-				.getForwardsIncidenceMatrix(pnmlData.getArcsArrayList(),
-						pnmlData.getTransitionsArrayList(),
-						pnmlData.getPlacesArrayList());
+				.getForwardsIncidenceMatrix(pnmlData.getModel().getArcs(),
+                        pnmlData.getModel().getTransitions(), pnmlData.getModel().getPlaces());
 
 		// Create marking array to return
 		int[] newmarking = new int[marking.length];
@@ -782,16 +766,17 @@ public class StateSpaceGenerator {
 
 		PetriNetView dataLayer = ApplicationSettings.getApplicationView()
 				.getCurrentPetriNetView();
-		ArrayList<TransitionView> trans = dataLayer.getTransitionsArrayList();
-		TransitionView tran = trans.get(transitionId);
+		Collection<TransitionView> trans = dataLayer.getTransitionsArrayList();
+        //TODO: Fix this
+		TransitionView tran = null; //trans.get(transitionId);
 		Iterator to = tran.getConnectToIterator();
 		Iterator from = tran.getConnectFromIterator();
 		if (to.hasNext()) {
 			ArcView arcTo = ((ArcView) to.next());
 			PlaceView source = ((PlaceView) arcTo.getSource());
 			if (dataLayer.isPlaceFunctionalRelated(source.getName())) {
-				LinkedList<MarkingView> weight = arcTo.getWeight();
-				LinkedList<MarkingView> sourceMarking = source
+				List<MarkingView> weight = arcTo.getWeight();
+                List<MarkingView> sourceMarking = source
 						.getCurrentMarkingView();
 				for (int i = 0; i < weight.size(); i++) {
 					int current = sourceMarking.get(i).getCurrentMarking();
@@ -815,8 +800,8 @@ public class StateSpaceGenerator {
 			PlaceView targetPlace = ((PlaceView) arcFrom.getTarget());
 
 			if (dataLayer.isPlaceFunctionalRelated(targetPlace.getName())) {
-				LinkedList<MarkingView> weight = arcFrom.getWeight();
-				LinkedList<MarkingView> sourceMarking = targetPlace
+                List<MarkingView> weight = arcFrom.getWeight();
+                List<MarkingView> sourceMarking = targetPlace
 						.getCurrentMarkingView();
 				for (int i = 0; i < weight.size(); i++) {
 					int current = sourceMarking.get(i).getCurrentMarking();
@@ -843,7 +828,6 @@ public class StateSpaceGenerator {
 	 * @param test
 	 *            The state to look for
 	 * @param es
-	 * @param exploredStates
 	 *            The hashtable to check for the state
 	 * @return
 	 */
@@ -942,8 +926,6 @@ public class StateSpaceGenerator {
 	 * @param pnmlData
 	 * @param s
 	 * @param sprime
-	 * @param v
-	 * @param vprime
 	 * @return double - the probability
 	 */
 	private static double rate(PetriNetView pnmlData, State s, State sprime) {
@@ -971,10 +953,10 @@ public class StateSpaceGenerator {
 //		System.out.println("rate1: "+pnmlData.getTransitionViews()[0].getRate());
 //		System.out.println("rate2: "+pnmlData.getTransitionViews()[1].getRate());
 //		System.out.println();
-		Matrix incidenceMatrix1 = pnmlData
+		Matrix incidenceMatrix1 = new Matrix(pnmlData
 				.getTokenViews()
 				.getFirst()
-				.getIncidenceMatrix();
+				.getIncidenceMatrix(null, null, null));
 		int transCount = pnmlData.numberOfTransitions();
 		// get list of transitions enabled at marking1
 		LinkedList<MarkingView>[] state = new LinkedList[marking1.length];
@@ -1051,12 +1033,10 @@ public class StateSpaceGenerator {
 	 * @param s
 	 * @param sprime
 	 * @param firedTransition
-	 * @param v
-	 * @param vprime
 	 * @return double - the probability
 	 */
 	private static double prob(PetriNetView pnmlData, State s, State sprime,
-			int firedTransition) {
+			int firedTransition) throws Exception {
 		
 		int[] marking1 = s.getState();
 		int[] marking2 = sprime.getState();
@@ -1071,9 +1051,8 @@ public class StateSpaceGenerator {
 		int[][] incidenceMatrix = pnmlData
 				.getTokenViews()
 				.getFirst()
-				.getIncidenceMatrix(pnmlData.getArcsArrayList(),
-						pnmlData.getTransitionsArrayList(),
-						pnmlData.getPlacesArrayList());
+				.getIncidenceMatrix(pnmlData.getModel().getArcs(),
+                        pnmlData.getModel().getTransitions(), pnmlData.getModel().getPlaces());
 		int transCount = pnmlData.numberOfTransitions();
 		// get list of transitions enabled at marking1
 		LinkedList<MarkingView>[] state = new LinkedList[marking1.length];
